src/z80asm/z80asm2/t/20-preproc/expected/cu_stop_01.txt
% z88dk-z80asm -v -dump-after-directives t/20-preproc//input/cu_stop_01.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Assembling t/20-preproc/input/cu_stop_01.asm...
t/20-preproc/input/cu_stop_01.asm:1:1: error: CU_STOP is only supported on the z80n
    cu.stop x 
    ^
t/20-preproc/input/cu_stop_01.asm:2:1: error: CU_STOP is only supported on the z80n
    cu.stop
    ^
